# xenosaga

./: .dockerignore  Dockerfile  app.py  episode2.json  episode2.py  pyproject.toml  readme.MD  requirements.txt
.github/workflows/: build-dev-image.yml  build-prod-image.yml  dependabot-auto-merge.yml  new_container.yml
assets/: autosize.js  dashAgGridComponentFunctions.js  xenosaga.db
assets/json/: episode1.json  episode2.json  episode3.json
components/: app_config.py  html_components.py
json/: ep1.parquet  episode1.json  episode1.json.new  episode2.json  episode3.json
pages/: ep1-page.py  ep1.py  ep2-page.py  ep2.py  ep3-page.py  ep3.py
utils/: dataframes.py  functions.py  json_to_sqlite.py
webscraping/: episode1.py  episode2.py  episode3.json  episode3.py
