[project]
name = "xenosaga"
version = "0.1.0"
description = "A searchable and sortable table of all enemies in the Xenosaga series, organized by game."
readme = "readme.MD"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "dash-ag-grid==32.3.2",
    "dash-bootstrap-components==2.0.4",
    "dash==3.3.0",
    "gunicorn==23.0.0",
    "loguru==0.7.3",
    "pandas==2.3.3",
    "requests==2.32.5",
]
